--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "description": "A port of voltrevo-event-emitter to flow",
   "main": "src/index.js",
-  "dependencies": {
-    "eslint": "^3.9.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-eslint": "^7.1.0",
     "eslint": "^3.9.1",
     "eslint-config-airbnb-base": "^12.0.0",
     "eslint-plugin-flowtype": "^2.25.0",
-    "eslint-plugin-import": "^1.16.0"
+    "eslint-plugin-import": "^1.16.0",
+    "flow": "^0.2.3",
+    "flow-bin": "^0.34.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
